// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submenu Should accept a custom arrow ➡️ 1`] = `
<Submenu
  arrow="🦄"
  disabled={false}
  label="bar"
  nativeEvent={Object {}}
>
  <div
    className="react-contexify__item"
    role="presentation"
  >
    <div
      className="react-contexify__item__content"
      onClick={[Function]}
    >
      bar
      <span
        className="react-contexify__submenu-arrow"
      >
        🦄
      </span>
    </div>
    <div
      className="react-contexify react-contexify__submenu"
      style={
        Object {
          "bottom": 0,
          "left": undefined,
          "right": "100%",
          "top": "initial",
        }
      }
    >
      <Children
        key=".$.0"
        nativeEvent={Object {}}
      >
        <div>
          foo
        </div>
      </Children>
    </div>
  </div>
</Submenu>
`;

exports[`Submenu Should not go offscreen 1`] = `
<Submenu
  arrow="▶"
  disabled={false}
  label="bar"
  nativeEvent={Object {}}
>
  <div
    className="react-contexify__item"
    role="presentation"
  >
    <div
      className="react-contexify__item__content"
      onClick={[Function]}
    >
      bar
      <span
        className="react-contexify__submenu-arrow"
      >
        ▶
      </span>
    </div>
    <div
      className="react-contexify react-contexify__submenu"
      style={
        Object {
          "bottom": 0,
          "left": undefined,
          "right": "100%",
          "top": "initial",
        }
      }
    >
      <Children
        key=".$.0"
        nativeEvent={Object {}}
      >
        <div>
          foo
        </div>
      </Children>
    </div>
  </div>
</Submenu>
`;

exports[`Submenu Should render without crash 💥 1`] = `
<Submenu
  arrow="▶"
  disabled={false}
  label="bar"
  nativeEvent={Object {}}
>
  <div
    className="react-contexify__item"
    role="presentation"
  >
    <div
      className="react-contexify__item__content"
      onClick={[Function]}
    >
      bar
      <span
        className="react-contexify__submenu-arrow"
      >
        ▶
      </span>
    </div>
    <div
      className="react-contexify react-contexify__submenu"
      style={
        Object {
          "bottom": "initial",
          "left": "100%",
          "right": undefined,
          "top": 0,
        }
      }
    >
      <Children
        key=".$.0"
        nativeEvent={Object {}}
      >
        <div>
          foo
        </div>
      </Children>
    </div>
  </div>
</Submenu>
`;
